# ml_from_scratch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: benchmark_report.py  benchmark_vs_sklearn.py
docs/: api_reference.md  math_derivations.md
mlengine/: __init__.py
mlengine/clustering/: __init__.py  dbscan.py  gmm.py  kmeans.py
mlengine/decomposition/: __init__.py  pca.py  svd.py  tsne.py
mlengine/evaluation/: __init__.py  calibration.py  cross_validation.py  metrics_classification.py  metrics_regression.py  statistical_tests.py
mlengine/linear/: __init__.py  logistic.py  regression.py  regularization.py
mlengine/naive_bayes/: __init__.py  gaussian_nb.py
mlengine/optimization/: __init__.py  gradient_descent.py  lr_schedulers.py  optimizers.py
mlengine/pipeline/: __init__.py  feature_union.py  pipeline.py
mlengine/preprocessing/: __init__.py  encoders.py  feature_selection.py  imbalanced.py  imputers.py  scalers.py
mlengine/svm/: __init__.py  kernel.py  svm.py
mlengine/trees/: __init__.py  decision_tree.py  gradient_boosting.py  random_forest.py  xgboost_minimal.py
mlengine/utils/: __init__.py  math_utils.py  plotting.py  validation.py
notebooks/: 01_linear_models_demo.ipynb  02_tree_models_demo.ipynb  03_unsupervised_demo.ipynb  04_full_pipeline_demo.ipynb
tests/: conftest.py  test_clustering.py  test_decomposition.py  test_evaluation.py  test_linear.py  test_naive_bayes.py  test_pipeline.py  test_preprocessing.py  test_svm.py  test_trees.py
