[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlengine"
version = "0.1.0"
description = "A production-grade ML engine built from scratch using NumPy"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "matplotlib>=3.7", "scikit-learn>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlengine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
